--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: clojure
 lein: lein2
-script: lein test && lein spec test/wishful/speclj_test.clj
+script: lein2 test && lein2 spec test/wishful/speclj_test.clj
